[emacs] Remove uninteresting and add remaining Reddit news feeds.
There's no reason to visit the Reddit homepage every again.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -169,11 +169,15 @@ Set news feeds.
       '(("Arch Linux" "https://www.archlinux.org/feeds/news/" notice linux)
         ("Baggers" youtube "UCMV8p6Lb-bd6UZtTc_QD4zA" lisp)
         ("Clickspring" youtube "UCworsKCR-Sx6R6-BnIjS2MA" metalwork)
-        ("Clojure" reddit "Clojure" clojure)
+        ("Clojure" reddit top "Clojure" clojure)
         ("ClojureTV" youtube "UCaLlzGqiPE2QRj6sSOawJRg" clojure)
-        ("DIY" reddit top "DIY" create)
-        ("Documentaries" reddit top "Documentaries" video doc)
         ("Emacs" reddit "emacs" emacs)
+        ("Erlang" reddit top "erlang" erlang)
+        ("Furniture Making" reddit top "FurnitureMaking" woodwork)
+        ("LEGO" reddit top "lego" lego)
+        ("Linux" reddit top "linux" linux)
+        ("Lisp" reddit top "lisp" lisp)
+        ("Programming" reddit top "programming" dev)
         ("Sacha Chua" "http://sachachua.com/blog/category/emacs/feed/" blog emacs)
         ("Two-Bit History" "https://twobithistory.org/feed.xml" blog history)
         ("Wait But Why" "https://waitbutwhy.com/feed" blog science psychology)
