[emacs] Add remaining YouTube news feeds.
There's no reason to visit the YouTube homepage ever again.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -166,22 +166,34 @@ Set news feeds.
     (declare-function elfeed-meta--put "elfeed-db")
 
     (defconst koek/feeds
-      '(("Arch Linux" "https://www.archlinux.org/feeds/news/" notice linux)
+      '(("3Blue1Brown" youtube "UCYO_jab_esuFRV4b17AJtAw" mathematics)
+        ("Arch Linux" "https://www.archlinux.org/feeds/news/" notice linux)
         ("Baggers" youtube "UCMV8p6Lb-bd6UZtTc_QD4zA" lisp)
         ("Clickspring" youtube "UCworsKCR-Sx6R6-BnIjS2MA" metalwork)
         ("Clojure" reddit top "Clojure" clojure)
         ("ClojureTV" youtube "UCaLlzGqiPE2QRj6sSOawJRg" clojure)
         ("Emacs" reddit "emacs" emacs)
+        ("Erlang Solutions" youtube "UCKrD_GYN3iDpG_uMmADPzJQ" erlang)
         ("Erlang" reddit top "erlang" erlang)
         ("Furniture Making" reddit top "FurnitureMaking" woodwork)
+        ("Ishitani Furniture" youtube "UC7FkqjV8SU5I8FCHXQSQe9Q" woodwork)
+        ("John Heisz" youtube "UCjA8vRlL1c7BDixQRJ39-LQ" woodwork)
         ("LEGO" reddit top "lego" lego)
+        ("Layout Land" youtube "UC7TizprGknbDalbHplROtag" css)
         ("Linux" reddit top "linux" linux)
         ("Lisp" reddit top "lisp" lisp)
-        ("Programming" reddit top "programming" dev)
+        ("LiveOverflow" youtube "UClcE-kVhqyiHCcjYwcpfj9w" hack)
+        ("Luke Smith" youtube "UC2eYFnH61tmytImy1mTYvhA" foss)
+        ("Professor Leonard" youtube "UCoHhuummRZaIVX7bD4t2czg" mathematics)
+        ("Programming" reddit top "programming" program)
+        ("ROBOHEMIAN!" youtube "GravityRoad" electronics)
+        ("Rainfall Projects" youtube "UCPO4D4-UeeFQceK8XrgwXug" woodwork metalwork)
         ("Sacha Chua" "http://sachachua.com/blog/category/emacs/feed/" blog emacs)
         ("Two-Bit History" "https://twobithistory.org/feed.xml" blog history)
-        ("Wait But Why" "https://waitbutwhy.com/feed" blog science psychology)
-        ("frank howarth" youtube "UC3_VCOJMaivgcGqPCTePLBA" woodwork))
+        ("Wait But Why" "https://waitbutwhy.com/feed" blog science)
+        ("frank howarth" youtube "UC3_VCOJMaivgcGqPCTePLBA" woodwork)
+        ("krtwood" youtube "UCrI3NWmFF45LwKwk5TEYihQ" woodwork)
+        ("scanlime" youtube "UCaEgw3321ct_PE4PJvdhXEQ" electronics))
       "List of news feeds.
   News feed is a list of format:
 
