[emacs] Add some news feeds.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -169,6 +169,7 @@ Set news feeds.
       '(("3Blue1Brown" youtube "UCYO_jab_esuFRV4b17AJtAw" mathematics)
         ("Arch Linux" "https://www.archlinux.org/feeds/news/" notice linux)
         ("Baggers" youtube "UCMV8p6Lb-bd6UZtTc_QD4zA" lisp)
+        ("Caches to Caches" "http://cachestocaches.com/feed" blog ai)
         ("Clickspring" youtube "UCworsKCR-Sx6R6-BnIjS2MA" metalwork)
         ("Clojure" reddit top "Clojure" clojure)
         ("ClojureTV" youtube "UCaLlzGqiPE2QRj6sSOawJRg" clojure)
@@ -184,6 +185,8 @@ Set news feeds.
         ("Lisp" reddit top "lisp" lisp)
         ("LiveOverflow" youtube "UClcE-kVhqyiHCcjYwcpfj9w" hack)
         ("Luke Smith" youtube "UC2eYFnH61tmytImy1mTYvhA" foss)
+        ("Mastering Emacs" "https://www.masteringemacs.org/feed" blog emacs)
+        ("Netflix TechBlog" "https://medium.com/feed/netflix-techblog" blog ai)
         ("Professor Leonard" youtube "UCoHhuummRZaIVX7bD4t2czg" mathematics)
         ("Programming" reddit top "programming" program)
         ("ROBOHEMIAN!" youtube "GravityRoad" electronics)
