--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2202,6 +2202,21 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
             (concat "\\hypersetup{\n "
                     (string-join (append options '("hidelinks")) ",\n ")
                     "\n}\n"))))
+
+  (use-package ox-icalendar
+    :defer t
+    :config
+    (setq org-icalendar-timezone "Europe/Brussels"))
+#+END_SRC
+
+*** org-caldav - Sync calendars
+[[https://github.com/dengste/org-caldav][org-caldav (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package org-caldav
+    :ensure t
+    :bind
+    ("C-c o s" . org-caldav-sync))
 #+END_SRC
 
 *** htmlize - Text to HTML converter
