[isync] Tweak storing secret.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -40,7 +40,7 @@ To generate the app password, follow [[https://www.fastmail.com/help/clients/app
 securely, run:
 
 #+BEGIN_SRC sh
-  secret-tool store --label="Emacs e-mail personal" app-password "Emacs e-mail personal"
+  secret-tool store --label="Emacs e-mail personal" host "imap.fastmail.com" port "993" user "nicolas@dejaeghe.re"
 #+END_SRC
 
 Define remote personal store. For server details, see [[https://www.fastmail.com/help/technical/servernamesandports.html][Server names and
@@ -51,7 +51,7 @@ ports (FastMail)]].
   Host imap.fastmail.com
   SSLType IMAPS
   User nicolas@dejaeghe.re
-  PassCmd "secret-tool lookup app-password \"Emacs e-mail personal\""
+  PassCmd "secret-tool lookup host \"imap.fastmail.com\" port \"993\" user \"nicolas@dejaeghe.re\""
 #+END_SRC
 
 Define personal channel.
