--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -167,6 +167,7 @@ Configure e-mail accounts.
   (use-package mu4e-vars
     :defer t
     :config
+    (defvar mu4e-bookmarks)
     (defvar mu4e-drafts-folder)
     (defvar mu4e-maildir)
     (defvar mu4e-refile-folder)
@@ -199,7 +200,19 @@ Configure e-mail accounts.
                    `((mu4e-refile-folder . ,mu4e-refile-folder)
                      (mu4e-drafts-folder . ,mu4e-drafts-folder)
                      (mu4e-sent-folder   . ,mu4e-sent-folder)
-                     (mu4e-trash-folder  . ,mu4e-trash-folder)))))))
+                     (mu4e-trash-folder  . ,mu4e-trash-folder))))))
+
+    (use-package mu4e-utils
+      :config
+      (declare-function make-mu4e-bookmark "mu4e-utils")
+
+      (setq mu4e-bookmarks
+            (list (make-mu4e-bookmark :name "Unread"
+                                      :query "flag:unread"
+                                      :key ?u)
+                  (make-mu4e-bookmark :name "Personal INBOX"
+                                      :query "maildir:/Personal/INBOX"
+                                      :key ?p)))))
 #+END_SRC
 
 * News feeds
